# TelegramDiceRollerBot

./: .env_example  Dockerfile  README.md  main.py  pyproject.toml
