[tool.poetry]
name = "dicerollervtm"
version = "0.1.0"
description = ""
authors = ["Natalia <natalia.vayngolts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dotenv = "^0.9.9"
python-telegram-bot = "^22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
